--- a/style.css
+++ b/style.css
@@ -1,23 +1,31 @@
+:root {
+    --header-height: 150px;
+}
+
 body {
     font-family: sans-serif;
+    font-weight: bold;
     min-height: 100vh;
     display: flex;
     flex-direction: row;
     margin: 0 0;
 }
 
-.left {
-    width: 16vw;
-    background-color: #1992D4;
-    color: white;
-    font-weight: bold;
-}
-
-.left img {
+img {
     display: inline-block;
     vertical-align: middle;
     padding-bottom: 5px;
     margin-right: 18px;
+}
+
+.left {
+    width: 16vw;
+    background-color: #1992D4;
+    color: white;
+}
+
+.left img {
+    
     filter: invert(100%);
 }
 
@@ -50,7 +58,68 @@ nav > ul {
     height: 30px;
 }
 
-a {
+.left a {
     text-decoration: none;
     color: white;
+}
+
+.right {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.header {
+    height: var(--header-height);
+    flex-shrink: 0;
+    margin-left: 2vw;
+}
+
+.upper {
+    height: calc(var(--header-height) / 2);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    
+}
+
+.search-bar {
+    flex: 1;
+}
+
+#search {
+    width: 80%;
+    height: 2rem;
+    border-radius: 15px;
+    background-color: #E2E8F0;
+    border: none;
+}
+
+#search:focus {
+    padding: 5px 10px;
+    outline: none;
+    border: none;
+}
+
+.personal {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: right;
+}
+
+.personal > .name {
+    margin-right: 8vw;
+    font-size: 18px;
+}
+
+.profile-pic {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+}
+
+.content {
+    background-color: #E2E8F0;
+    height: 100%;
 }
