--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 body {
     font-family: var(--font);
     font-weight: bold;
+    font-size: 1.1em;
     min-height: 100vh;
     display: flex;
     flex-direction: row;
@@ -29,7 +30,7 @@ button {
     padding: 8px 25px;
     box-sizing: border-box;
     font-family: var(--font);
-    font-size: 1.2em;
+    font-size: 1em;
     font-weight: bold;
     min-width: 120px;
     height: 40px;
@@ -70,10 +71,6 @@ button {
     padding-bottom: 15px;
 }
 
-nav > ul {
-    font-size: 20px;
-}
-
 .nav-icon {
     width: 30px;
     height: 30px;
@@ -93,8 +90,10 @@ nav > ul {
 .header {
     height: var(--header-height);
     flex-shrink: 0;
-    margin-left: 2vw;
+    padding-left: 2vw;
     padding-bottom: 10px;
+    box-shadow: 0 0 0px 0 rgba(0, 0, 0, 0.08), 0 2px 4px 0 rgba(0, 0, 0, 0.12);
+    position: relative;
 }
 
 .upper {
@@ -133,7 +132,7 @@ nav > ul {
 
 .personal > .name {
     margin-right: 8vw;
-    font-size: 18px;
+    font-size: 1.15em;
 }
 
 .profile-pic {
@@ -162,7 +161,7 @@ nav > ul {
 }
 
 .greeting .name {
-    font-size: 24px;
+    font-size: 1.5em;
 }
 
 .actions {
@@ -175,7 +174,105 @@ nav > ul {
     padding: 10px 12px;
 }
 
-.content {
+.main {
     background-color: #E2E8F0;
     height: 100%;
+    display: grid;
+    padding: 3vh 2vw;
+    grid-template-columns: 3fr 1.25fr;
+    grid-template-rows: 1em 1fr 1em 1fr;
+    grid-template-areas: 
+    "projects-title announcement-title"
+    "projects announcement"
+    "projects trending-title"
+    "projects trending";
+    gap: 10px;
 }
+
+.main > div {
+    border: 0px solid black;
+}
+
+#projects-title {
+    grid-area: projects-title;
+}
+
+.projects {
+    grid-area: projects;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 350px);
+    grid-template-rows: repeat(auto-fill, 200px);
+    gap: 15px;
+}
+
+.card {
+    box-sizing: border-box;
+    padding: 20px 20px;
+    background-color: white;
+    border-radius: 1em;
+    max-width: 500px;
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.08), 0 2px 4px 0 rgba(0, 0, 0, 0.12);
+}
+
+.project.card {
+    width: 350px;
+    height:200px;
+}
+
+#announcement-title {
+    grid-area: announcement-title;
+}
+
+.announcement {
+    grid-area: announcement;
+}
+
+.announcement.card {
+    width: 100%;
+    height:100%;
+    display: grid;
+    gap: 3px;
+    /* grid-template-rows: repeat(auto-fill, minmax(100px, 1fr)); */
+    grid-auto-columns: auto;
+}
+
+.announcement-display {
+    /* display: inline-block; */
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5px;
+    flex-shrink: 1;
+}
+
+.announcement-subtitle {
+    margin-top: 0.3em;
+    font-size: small;
+    color: grey;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;         /*prevent text from being shown outside the border */
+    text-overflow: ellipsis;  /*cut off text with an ellipsis*/
+}
+
+.announcement.card > * {
+    border-bottom: 1px solid grey;
+}
+
+.announcement.card > *:last-child {
+    border-bottom: none;
+}
+
+#trending-title {
+    grid-area: trending-title;
+}
+
+.trending {
+    grid-area: trending;
+}
+
+.trending.card {
+    width: 100%;
+    height:100%;
+}
+
