--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ button {
     border-radius: 50%;
 }
 
-.personal > .profile-pic {
+.small-img {
     width: 45px;
     height: 45px;
 }
@@ -179,7 +179,7 @@ button {
     height: 100%;
     display: grid;
     padding: 3vh 2vw;
-    grid-template-columns: 3fr 1.25fr;
+    grid-template-columns: 3fr minmax(min-content, 1.25fr);
     grid-template-rows: 1em 1fr 1em 1fr;
     grid-template-areas: 
     "projects-title announcement-title"
@@ -207,7 +207,7 @@ button {
 
 .card {
     box-sizing: border-box;
-    padding: 20px 20px;
+    padding: 25px 30px;
     background-color: white;
     border-radius: 1em;
     max-width: 500px;
@@ -229,10 +229,8 @@ button {
 
 .announcement.card {
     width: 100%;
-    height:100%;
     display: grid;
     gap: 3px;
-    /* grid-template-rows: repeat(auto-fill, minmax(100px, 1fr)); */
     grid-auto-columns: auto;
 }
 
@@ -273,6 +271,19 @@ button {
 
 .trending.card {
     width: 100%;
-    height:100%;
+    display: grid;
+    gap: 3px;
+    grid-template-rows: auto;
+    /* grid-template-rows: repeat(auto-fill, 3em) */
 }
 
+.trending-display {
+    display: flex;
+    flex-direction: row;
+}
+
+.trending-project {
+    font-size: 0.8em;
+    color: gray;
+    margin-top: 0.3em;
+}
